--- a/goods-list.html
+++ b/goods-list.html
@@ -363,7 +363,8 @@
                   </span>
                 </div>
                 <div class="accordion_wrap">
-                  <button class="accordionItem">
+                  <div class="accordion_box">
+                  <button type="button" class="accordionItem">
                     <h3 class="accordion_tit">의류 사이즈</h3>
                   </button>
                   <div class="panel">
@@ -408,7 +409,9 @@
                     </ul>
                   </form>
                   </div>
-                  <button class="accordionItem">
+                  </div>
+                   <div class="accordion_box">
+                  <button type="button" class="accordionItem">
                     <h3 class="accordion_tit">색상</h3>
                   </button>
                   <div class="panel">
@@ -480,7 +483,9 @@
                     </ul>
                     <button type="button" class="btn_more_box2">더보기</button>
                   </div> 
-                  <button class="accordionItem">
+                  </div>
+                  <div class="accordion_box">
+                  <button type="button" class="accordionItem">
                     <h3 class="accordion_tit">가격</h3>
                   </button>
                   <div class="panel">
@@ -511,6 +516,7 @@
                      </div>
                       </li>
                     </ul>
+                  </div>
                   </div>
                 </div>
               </div>
