--- a/outline/footer.html
+++ b/outline/footer.html
@@ -5,46 +5,79 @@
         <img src="/images/comm/PRADA.svg" alt="PRADA" />
       </a>
     </div>
-    <div class="sns_icon">
-      <ul class="footer-sns_icons">
-        <li>
-          <a href="#" class="fb">
-            <img src="/images/comm/SVG/Facebook.svg" alt="facebook" />
-          </a>
-        </li>
-        <li>
-          <a href="#" class="ins">
-            <img src="/images/comm/SVG/Instagram.svg" alt="instagram" />
-          </a>
-        </li>
-        <li>
-          <a href="#" class="tw">
-            <img src="/images/comm/SVG/Twitter.svg" alt="twitter" />
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="info_policy">
-      <a href="#" class="link_policy">고객센터</a>
-      <a href="#" class="link_policy">이용약관</a>
-      <a href="#" class="link_policy">개인정보처리방침</a>
-      <a href="#" class="link_policy">이용안내</a>
-    </div>
-    <div class="footer_info">
-      <div class="copyright">&#169;PRADA 2007 - 2023</div>
-      <p class="ft_info1">
-        회사명: 프라다 코리아 (유) <br />
-        사업자 등록번호: 213-86-18599 <br />
-        대표자: 최문영. 개인정보 보호책임자: 김지훈이사 <br />
-        통신판매신고번호: 2017-서울강남-04082 <br />
-        고객 서비스 센터: 080-522-7199.
-      </p>
-      <div class="footer_adr">
-        주소: 서울시 강남구 압구정로 439 06010 <br />
-        이메일:
-        <a href="mailto:kimeumin98@naver.com" class="footer_mail"
-          >kimeumin98@naver.com</a
-        >
+    <div class="ft_info_box">
+      <div class="sns_icon">
+        <ul class="footer-sns_icons">
+          <li>
+            <a href="#" class="fb">
+              <img src="/images/comm/SVG/Facebook.svg" alt="facebook" />
+            </a>
+          </li>
+          <li>
+            <a href="#" class="ins">
+              <img src="/images/comm/SVG/Instagram.svg" alt="instagram" />
+            </a>
+          </li>
+          <li>
+            <a href="#" class="tw">
+              <img src="/images/comm/SVG/Twitter.svg" alt="twitter" />
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="info_policy">
+        <a href="#" class="link_policy">고객센터</a>
+        <a href="#" class="link_policy">이용약관</a>
+        <a href="#" class="link_policy">개인정보처리방침</a>
+        <a href="#" class="link_policy">이용안내</a>
+      </div>
+      <div class="footer_info">
+        <div class="sns_icon_pc">
+          <ul class="footer-sns_icons">
+            <li>
+              <a href="#" class="fb">
+                <img src="/images/comm/SVG/Facebook.svg" alt="facebook" />
+              </a>
+            </li>
+            <li>
+              <a href="#" class="ins">
+                <img src="/images/comm/SVG/Instagram.svg" alt="instagram" />
+              </a>
+            </li>
+            <li>
+              <a href="#" class="tw">
+                <img src="/images/comm/SVG/Twitter.svg" alt="twitter" />
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="copyright">&#169;PRADA 2007 - 2023</div>
+        <p class="ft_info1">
+          회사명: 프라다 코리아 (유) <br />
+          사업자 등록번호: 213-86-18599 <br />
+          대표자: 최문영. 개인정보 보호책임자: 김지훈이사 <br />
+          통신판매신고번호: 2017-서울강남-04082 <br />
+          고객 서비스 센터: 080-522-7199.
+        </p>
+        <p class="ft_info1_pc">
+          회사명: 프라다 코리아 (유). 사업자등록번호: 213-86-18599. <br />
+          대표자: 최문영. 개인정보 보호책임자: 김지훈이사. <br />
+          통신판매신고번호: 2017-서울강남-04082. 주소: 서울시 강남구 압구정로
+          439 06010. <br />
+          고객센터 서비스 센터: 080-522-7199. 이메일:
+          client.service.kr@prada.com. <br />
+          법적고지 및 및 이용약관. 호스팅 서비스: WIIT. <br />
+          구매안전서비스: NHN한국 사이버결제 주식회사에 가입하여 <br />
+          고객님의 안전한 거래를 보장하고 있습니다. <br />
+          모든제품은 2016년 1월 이후 생산된 제품입니다. <br />
+        </p>
+        <div class="footer_adr">
+          주소: 서울시 강남구 압구정로 439 06010 <br />
+          이메일:
+          <a href="mailto:kimeumin98@naver.com" class="footer_mail"
+            >kimeumin98@naver.com</a
+          >
+        </div>
       </div>
     </div>
   </div>
