--- a/detailpage.html
+++ b/detailpage.html
@@ -338,7 +338,7 @@
             <div class="swiper-slide">
               <div class="thumb">
                 <img
-                  src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_MDF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.600.600.jpg"
+                  src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_MDF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
                   alt="detail_cloth"
                 />
               </div>
@@ -369,6 +369,10 @@
             </div>
           </div>
           <div class="swiper-scrollbar"></div>
+          <div class="navigation">
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+        </div>
         </div>
         <section class="pr_option">
           <div class="inner">
@@ -403,7 +407,7 @@
                 </ul>
               </div>
             </div>
-            <div class="pr_info">
+            <div class="pr_info1">
               <h2 class="title">
                 <span>FROM THE RUNWAY</span> <br />캐시미어 카디건
               </h2>
@@ -619,6 +623,29 @@
                   </ul>
                 </div>
                 <button class="accordion">
+                  <h3 class="accordion_tit">리뷰(2)</h3>
+                  <i class="las la-chevron-down"></i>
+                </button>
+                <div class="panel">
+                  <ul class="nav_wrap">
+                    <li class="nav_item">
+                      <a href="#">Fondazione Prada</a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#">Prada Group</a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#">Luna Rossa</a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#">사회적 책임</a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#">채용정보</a>
+                    </li>
+                  </ul>
+                </div>
+                <button class="accordion">
                   <h3 class="accordion_tit">회사</h3>
                   <i class="las la-chevron-down"></i>
                 </button>
@@ -642,6 +669,8 @@
                   </ul>
                 </div>
               </div>
+            </div> 
+            <!-- <div class="pr_info2">
               <h2 class="related_list_tit">관련 항목</h2>
               <div class="swiper mySwiper2">
                 <div class="swiper-wrapper">
@@ -725,10 +754,100 @@
                 </div>
                 <div class="swiper-scrollbar"></div>
               </div>
-            </div>
+            </div> -->
           </div>
         </section>
+        <section class="pr_option2">
+        <div class="pr_info2">
+          <div class="inner">
+          <h2 class="related_list_tit">관련 항목</h2>
+          <div class="swiper mySwiper2">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  src="https://www.prada.com/content/dam/pradanux_products/U/UMC/UMC149/1JF4F0002/UMC149_1JF4_F0002_S_202_SLF.png/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                  alt="clothslide2"
+                  class="clothslide2_img"
+                />
+                <h2 class="product_name">울 카디건</h2>
+                <h2 class="product_price">₩ 2,800,000</h2>
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src=" https://www.prada.com/content/dam/pradabkg_products/U/UMB/UMB264/1ZLEF0008/UMB264_1ZLE_F0008_S_212_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                  alt="clothslide2"
+                  class="clothslide2_img"
+                />
+                <h2 class="product_name">
+                  슈퍼파인 울 <br />크루넥 스웨터
+                </h2>
+                <h2 class="product_price">₩ 1,840,000</h2>
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="https://www.prada.com/content/dam/pradabkg_products/U/UMB/UMB481/11J6F0UB0/UMB481_11J6_F0UB0_S_231_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                  alt="clothslide2"
+                  class="clothslide2_img"
+                />
+                <h2 class="product_name">
+                  울 및 캐시미어 <br />
+                  크루넥 스위터
+                </h2>
+                <h2 class="product_price">₩ 3,050,000</h2>
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="https://www.prada.com/content/dam/pradabkg_products/U/UMP/UMP67/1JF4F0002/UMP67_1JF4_F0002_S_202_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                  alt="clothslide2"
+                  class="clothslide2_img"
+                />
+                <h2 class="product_name">
+                  울 및 리나일론 <br />
+                  개버딘 팬츠
+                </h2>
+                <h2 class="product_price">₩ 2,450,000</h2>
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG193/12I7F0002/UMG193_12I7_F0002_S_231_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                  alt="clothslide2"
+                  class="clothslide2_img"
+                />
+                <h2 class="product_name">
+                  울 및 캐시미어 <br />
+                  카디건
+                </h2>
+                <h2 class="product_price">₩ 3,650,000</h2>
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="https://www.prada.com/content/dam/pradabkg_products/S/SGB/SGB685/1WQ8F0002/SGB685_1WQ8_F0002_S_211_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                  alt="clothslide2"
+                  class="clothslide2_img"
+                />
+                <h2 class="product_name">
+                  리나일론 후드 <br />
+                  블루종 재킷
+                </h2>
+                <h2 class="product_price">₩ 3,300,000</h2>
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG170/11SVF0008/UMG170_11SV_F0008_S_221_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                  alt="clothslide2"
+                  class="clothslide2_img"
+                />
+                <h2 class="product_name">실크 카디건</h2>
+                <h2 class="product_price">₩ 3,850,000</h2>
+              </div>
+            </div>
+            <div class="swiper-scrollbar"></div>
+          </div>
+        </div>
+      </div>
+      </section>
       </main>
+    </div>
       <footer data-include-path="./outline/footer.html"></footer>
     </div>
   </body>
