--- a/outline/footer.html
+++ b/outline/footer.html
@@ -26,10 +26,46 @@
         </ul>
       </div>
       <div class="info_policy">
-        <a href="#" class="link_policy">고객센터</a>
-        <a href="#" class="link_policy">이용약관</a>
-        <a href="#" class="link_policy">개인정보처리방침</a>
-        <a href="#" class="link_policy">이용안내</a>
+        <div class="link_policy_box">
+          <a href="#" class="link_policy">고객센터</a>
+          <a href="#" class="link_policy">이용약관</a>
+          <a href="#" class="link_policy">개인정보처리방침</a>
+          <a href="#" class="link_policy">이용안내</a>
+        </div>
+        <div class="newsletter_container">
+          <form class="nlBox innovation">
+            <h3 class="newsletter_tit">뉴스레터 구독</h3>
+            <div class="nlBox_inputWrapper">
+              <input
+                type="email"
+                class="nlBox_input"
+                placeholder="이메일 주소를 입력하세요."
+                title="email-nl"
+                name="email-nl"
+              />
+              <button type="button" class="nlBox_btn">
+                <span
+                  aria-label="이메일 보내기"
+                  class="nlBox_btnIcon pr-icon-new-arrow-right-big"
+                ></span>
+                <span class="sr-only">이메일 보내기</span>
+              </button>
+            </div>
+            <div class="nlBox_inputWrapperCheck">
+              <input
+                type="checkbox"
+                id="nlBox_checkbox"
+                class="nlBox_checkbox"
+              />
+              <label for="nlBox_checkbox" class="nlBox_checkbox_label">
+                본인은 <a href="#">개인정보처리방침</a>을 읽고 이에 동의합니다.
+                <br />
+                그리고 뉴스 레터를 구독하고 싶습니다. 본인은 만 16세 이상임을
+                확인합니다.
+              </label>
+            </div>
+          </form>
+        </div>
       </div>
       <div class="footer_info">
         <div class="sns_icon_pc">
@@ -51,7 +87,10 @@
             </li>
           </ul>
         </div>
-        <div class="copyright">&#169;PRADA 2007 - 2023</div>
+        <div class="copyright_box">
+          <div class="copyright">&#169;PRADA 2007 - 2023</div>
+          <div class="vat">부가가치세 213-86-18599</div>
+        </div>
         <p class="ft_info1">
           회사명: 프라다 코리아 (유) <br />
           사업자 등록번호: 213-86-18599 <br />
