--- a/detailpage.html
+++ b/detailpage.html
@@ -483,9 +483,8 @@
               <div class="description-preview">
                 <p>
                   절제된 라인의 디자인으로 고급 캐시미어 카디건의 세련된
-                  스타일을 완성합니다. 전면 버튼 클로저가 있는 카디건으로, 립
-                  조직 니트 트림이 특징입니다. 아이코닉한 니트
-                  트라이앵글이돋보입니다.
+                  스타일을 완성합니다. 전면 버튼 클로저가 있는 카디건으로, 
+                  립조직 니트 트림이 특징입니다. 아이코닉한 니트 트라이앵글이 돋보입니다. 
                 </p>
                 <ul>
                   <li>
@@ -503,7 +502,7 @@
               <button type="button" class="product_detail_info">
                 <span>제품 상세 정보 더보기</span>
               </button>
-              <div class="view_image_wrap">
+              <!-- <div class="view_image_wrap">
                 <h3 class="product_info">상품정보</h3>
                 <h3 class="model_img_tit">Model image</h3>
                 <span class="model_img_exp"
@@ -552,7 +551,7 @@
                     </div>
                   </li>
                 </ul>
-              </div>
+              </div> -->
               <div class="meet_styling_wrap">
                 <h2 class="meet_styling_tit">스타일링 만나보기</h2>
                 <p class="meet_styling_intro">
@@ -564,6 +563,7 @@
                 </button>
               </div>
               <div class="accordion_wrap">
+                <div class="accordion_box">
                 <button class="accordion">
                   <h3 class="accordion_tit">도와드릴까요?</h3>
                   <i class="las la-chevron-down"></i>
@@ -579,11 +579,10 @@
                     <li class="nav_item">
                       <a href="#">FAQ</a>
                     </li>
-                    <li class="nav_item">
-                      <a href="#">추가정보</a>
-                    </li>
                   </ul>
                 </div>
+              </div>
+              <div class="accordion_box">
                 <button class="accordion">
                   <h3 class="accordion_tit">무료배송 및 반품</h3>
                   <i class="las la-chevron-down"></i>
@@ -604,7 +603,8 @@
                     제품이 다른 경우에만 반품할 수 있습니다. <br />
                   </p>
                 </div>
-
+              </div>
+              <div class="accordion_box">
                 <button class="accordion">
                   <h3 class="accordion_tit">익스클루시브 서비스</h3>
                   <i class="las la-chevron-down"></i>
@@ -622,14 +622,84 @@
                     </li>
                   </ul>
                 </div>
+              </div>
+              <div class="accordion_box">
                 <button class="accordion">
-                  <h3 class="accordion_tit">리뷰(2)</h3>
+                  <h3 class="accordion_tit">리뷰(10)</h3>
+                  <div class="css-n209rX" aria-label="5.0">
+                    <span class="text-color-primary-dark css-end85d">
+                      <span>
+                        <span class="star"><i class="las la-star"></i></span>
+                        <span class="star"><i class="las la-star"></i></span>
+                        <span class="star"><i class="las la-star"></i></span>
+                        <span class="star"><i class="las la-star"></i></span>
+                        <span class="star"><i class="las la-star"></i></span>
+                      </span>
+                    </span>
+                    <i class="las la-chevron-down"></i>
+                  </div>
+                </button>
+                <div class="panel">
+                  <ul class="nav_wrap">
+                    <li class="nav_item">
+                      <span class="review_star">
+                        <span>
+                          <span class="star"><i class="las la-star"></i></span>
+                          <span class="star"><i class="las la-star"></i></span>
+                          <span class="star"><i class="las la-star"></i></span>
+                          <span class="star"><i class="las la-star"></i></span>
+                          <span class="star"><i class="las la-star"></i></span>
+                        </span>
+                      </span>
+                      <h4 class="name">박**</h4>
+                      <p class="product_review">170.4 / 63 58사이즈 딱입니다. <br>
+                        오버핏이긴하나 기장이 조금 짧고 60입기엔 좀 큽니다.</p>
+                    </li>
+                    <li class="nav_item">
+                      <span class="review_star">
+                        <span>
+                          <span class="star"><i class="las la-star"></i></span>
+                          <span class="star"><i class="las la-star"></i></span>
+                          <span class="star"><i class="las la-star"></i></span>
+                          <span class="star"><i class="las la-star"></i></span>
+                          <span class="star"><i class="las la-star"></i></span>
+                        </span>
+                      </span>
+                      <h4 class="name">김**</h4>
+                      <p class="product_review">매우만족합니다</p>
+                    </li>
+                    <li class="nav_item">
+                      <span class="review_star">
+                        <span>
+                          <span class="star"><i class="las la-star"></i></span>
+                          <span class="star"><i class="las la-star"></i></span>
+                          <span class="star"><i class="las la-star"></i></span>
+                          <span class="star"><i class="las la-star"></i></span>
+                          <span class="star"><i class="las la-star"></i></span>
+                        </span>
+                      </span>
+                      <h4 class="name">이**</h4>
+                      <p class="product_review">아주 좋습니다. 다만 조금 더 큰 사이즈가 나온다면 더 좋겠습니다</p>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#" class="review_more">리뷰 더보기</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="accordion_box">
+                <button class="accordion">
+                  <h3 class="accordion_tit">추가정보</h3>
                   <i class="las la-chevron-down"></i>
                 </button>
                 <div class="panel">
                   <ul class="nav_wrap">
                     <li class="nav_item">
-                      <a href="#">Fondazione Prada</a>
+                      <h4 class="addinfo_tit">혼용률</h4>
+                      <p class="addinfo_exp">
+                        90% 캐시미어 10% 나일론 탈부착 가능한 칼라 80%이면 <br>
+                        20% 나일론 동물성 비직물 부분 포함
+                      </p>
                     </li>
                     <li class="nav_item">
                       <a href="#">Prada Group</a>
@@ -645,29 +715,7 @@
                     </li>
                   </ul>
                 </div>
-                <button class="accordion">
-                  <h3 class="accordion_tit">회사</h3>
-                  <i class="las la-chevron-down"></i>
-                </button>
-                <div class="panel">
-                  <ul class="nav_wrap">
-                    <li class="nav_item">
-                      <a href="#">Fondazione Prada</a>
-                    </li>
-                    <li class="nav_item">
-                      <a href="#">Prada Group</a>
-                    </li>
-                    <li class="nav_item">
-                      <a href="#">Luna Rossa</a>
-                    </li>
-                    <li class="nav_item">
-                      <a href="#">사회적 책임</a>
-                    </li>
-                    <li class="nav_item">
-                      <a href="#">채용정보</a>
-                    </li>
-                  </ul>
-                </div>
+              </div>
               </div>
             </div> 
             <!-- <div class="pr_info2">
@@ -760,7 +808,17 @@
         <section class="pr_option2">
         <div class="pr_info2">
           <div class="inner">
-          <h2 class="related_list_tit">관련 항목</h2>
+            <div class="meet_styling_wrap_pc">
+              <h2 class="meet_styling_tit">스타일링 만나보기</h2>
+              <p class="meet_styling_intro">
+                Instagram에 사진을 업로드하거나 @PRADA를 멘션해 나의 스타일을
+                선보일 기회를 노려 보세요.
+              </p>
+              <button type="button" class="upload_now">
+                <h3 class="upload_tit">사진을업로드하세요.</h3>
+              </button>
+            </div>
+          <h2 class="related_list_tit">관련 제품</h2>
           <div class="swiper mySwiper2">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -841,7 +899,59 @@
                 <h2 class="product_price">₩ 3,850,000</h2>
               </div>
             </div>
-            <div class="swiper-scrollbar"></div>
+            <div class="swiper-scrollbar"></div>        
+          </div>
+          <div class="view_image_wrap">
+            <div class="viewimg_exp_box">
+            <h2 class="product_info">상품정보</h2>
+            <h3 class="model_img_tit">Model image</h3>
+            <span class="model_img_exp"
+              >모델 착용 이미지보다 제품컷 이미지의 컬러가 정확합니다.</span
+            >
+          </div>
+            <ul>
+              <li>
+                <div class="thumb">
+                  <img
+                    src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_MDF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                    alt="imginfo"
+                  />
+                </div>
+              </li>
+              <li>
+                <div class="thumb">
+                  <img
+                    src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_MDD.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                    alt="imginfo"
+                  />
+                </div>
+              </li>
+              <li>
+                <div class="thumb">
+                  <img
+                    src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_MDDA.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                    alt="imginfo"
+                  />
+                </div>
+              </li>
+              <li>
+                <div class="thumb">
+                  <img
+                    src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_MDB.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                    alt="imginfo"
+                  />
+                </div>
+              </li>
+              <!-- <h3 class="Product_img_tit">Product image</h3>
+              <li>
+                <div class="thumb">
+                  <img
+                    src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                    alt="imginfo"
+                  />
+                </div>
+              </li> -->
+            </ul>
           </div>
         </div>
       </div>
