--- a/detailpage.html
+++ b/detailpage.html
@@ -408,6 +408,7 @@
               </div>
             </div>
             <div class="pr_info1">
+              <div class="product_box">
               <h2 class="title">
                 <span>FROM THE RUNWAY</span> <br />캐시미어 카디건
               </h2>
@@ -417,6 +418,8 @@
                   원
                 </span>
               </div>
+            </div>
+            <div class="size_box">
               <div class="size_info">
                 <h3 class="cloth_size_choice">사이즈선택</h3>
                 <a href="#" target="_blank" class="cloth_size_guide"
@@ -480,6 +483,7 @@
                   <span class="wish_txt">위시리스트</span>
                 </button>
               </div>
+            </div>
               <div class="description-preview">
                 <p>
                   절제된 라인의 디자인으로 고급 캐시미어 카디건의 세련된
@@ -702,16 +706,19 @@
                       </p>
                     </li>
                     <li class="nav_item">
-                      <a href="#">Prada Group</a>
+                      <h4 class="addinfo_tit">제조자명</h4>
+                      <p class="addinfo_exp">
+                        Prada SpA
+                      </p>
                     </li>
                     <li class="nav_item">
-                      <a href="#">Luna Rossa</a>
+                      <h4 class="addinfo_tit">수입자명</h4>
+                      <p class="addinfo_exp">
+                        (유)프라다 코리아
+                      </p>
                     </li>
                     <li class="nav_item">
-                      <a href="#">사회적 책임</a>
-                    </li>
-                    <li class="nav_item">
-                      <a href="#">채용정보</a>
+                      <a href="#" class="addinfo_origin">원산지정보</a>
                     </li>
                   </ul>
                 </div>
