--- a/cart.html
+++ b/cart.html
@@ -71,7 +71,7 @@
     </div>
     <div class="wrap" id="cart_wrap">
       <!-- logo 왼쪽 type -->
-      <header id="header">
+   <header id="header">
       <div class="inner">
         <h1 class="logo">
           <a href="#">
@@ -170,7 +170,7 @@
                   </ul>
                     <ul class="menu_item">
                     <li><a class="first_tit" href="#">레디투웨어</a></li>
-                    <li><a href="#">전체보기</a></li>
+                    <li><a href="./goods-list.html">전체보기</a></li>
                     <li><a href="#">재킷 및 코트</a></li>
                     <li><a href="#">니트웨어</a></li>
                     <li><a href="#">셔츠</a></li>
