--- a/goods-list.html
+++ b/goods-list.html
@@ -45,7 +45,7 @@
   </div>
   <div class="wrap">
     <!-- logo 왼쪽 type -->
-  <header id="header">
+   <header id="header">
       <div class="inner">
         <h1 class="logo">
           <a href="#">
@@ -144,7 +144,7 @@
                   </ul>
                     <ul class="menu_item">
                     <li><a class="first_tit" href="#">레디투웨어</a></li>
-                    <li><a href="#">전체보기</a></li>
+                    <li><a href="./goods-list.html">전체보기</a></li>
                     <li><a href="#">재킷 및 코트</a></li>
                     <li><a href="#">니트웨어</a></li>
                     <li><a href="#">셔츠</a></li>
@@ -522,7 +522,7 @@
               </div>
               <ul class="lst-shopping">
                 <li>
-                  <a href="#">
+                  <a href="./detailpage.html">
                     <div class="thumb-shopping">
                       <img
                         src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
