--- a/detailpage.html
+++ b/detailpage.html
@@ -73,7 +73,7 @@
     <header id="header">
       <div class="inner">
         <h1 class="logo">
-          <a href="#">
+          <a href="./index.html">
             <img src="/images/comm/PRADA.svg" alt="PRADA" />
           </a>
         </h1>
@@ -465,7 +465,7 @@
                 </ul>
               </form>
               <div class="button_wrapper">
-                <button type="button" class="cart" aria-label="장바구니">
+                <button type="button" onclick="location.href='./cart.html'" class="cart" aria-label="장바구니">
                   장바구니
                 </button>
                 <button type="button" class="wish_list" aria-label="위시리스트">
