--- a/goods-list.html
+++ b/goods-list.html
@@ -48,7 +48,7 @@
    <header id="header">
       <div class="inner">
         <h1 class="logo">
-          <a href="#">
+          <a href="./index.html">
             <img src="/images/comm/PRADA.svg" alt="PRADA" />
           </a>
         </h1>
