--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <header id="header">
       <div class="inner">
         <h1 class="logo">
-          <a href="#">
+          <a href="./index.html">
             <img src="/images/comm/PRADA.svg" alt="PRADA" />
           </a>
         </h1>
@@ -271,7 +271,7 @@
          </a>
           <ul class="menu">
             <li><a href="#">WOMAN</a></li>
-            <li><a href="#">MAN</a></li>
+            <li><a href="./goods-list.html">MAN</a></li>
             <li><a href="#">GIFT</a></li>
             <li><a href="#">LINEA ROSSA</a></li>
           </ul>
