--- a/cart.html
+++ b/cart.html
@@ -74,7 +74,7 @@
    <header id="header">
       <div class="inner">
         <h1 class="logo">
-          <a href="#">
+          <a href="./index.html">
             <img src="/images/comm/PRADA.svg" alt="PRADA" />
           </a>
         </h1>
@@ -404,7 +404,7 @@
                 총 결제 예정 금액 : 
                 <span class="total-price right-span">3,850,000 원</span>
             </p>
-            <a class="checkoutBtn button primary width-max btn-order" href="#">
+            <a class="checkoutBtn button primary width-max btn-order" href="./payment.html">
                 주문하기
             </a>
             <a class="shipping_more_btn" href="#">쇼핑 계속하기</a>
