--- a/cart.html
+++ b/cart.html
@@ -75,7 +75,7 @@
       <div class="inner">
         <h1 class="logo">
           <a href="./index.html">
-            <img src="/images/comm/PRADA.svg" alt="PRADA" />
+          <img src="./images/comm/PRADA.svg" alt="PRADA" />
           </a>
         </h1>
         <div class="gnb_wrap">
