--- a/outline/footer.html
+++ b/outline/footer.html
@@ -2,7 +2,7 @@
   <div class="ft_inner">
     <div class="logo">
       <a href="../index.html">
-        <img src="/images/comm/PRADA.svg" alt="PRADA" />
+        <img src="./images/comm/PRADA.svg" alt="PRADA" />
       </a>
     </div>
     <div class="ft_info_box">
@@ -72,17 +72,17 @@
           <ul class="footer-sns_icons">
             <li>
               <a href="#" class="fb">
-                <img src="/images/comm/SVG/Facebook.svg" alt="facebook" />
+                <img src="../images/comm/SVG/Facebook.svg" alt="facebook" />
               </a>
             </li>
             <li>
               <a href="#" class="ins">
-                <img src="/images/comm/SVG/Instagram.svg" alt="instagram" />
+                <img src="../images/comm/SVG/Instagram.svg" alt="instagram" />
               </a>
             </li>
             <li>
               <a href="#" class="tw">
-                <img src="/images/comm/SVG/Twitter.svg" alt="twitter" />
+                <img src="../images/comm/SVG/Twitter.svg" alt="twitter" />
               </a>
             </li>
           </ul>
