--- a/outline/footer.html
+++ b/outline/footer.html
@@ -1,7 +1,7 @@
 <footer id="footer" class="container">
   <div class="ft_inner">
     <div class="logo">
-      <a href="../index.html">
+      <a href="#">
         <img src="./images/comm/PRADA.svg" alt="PRADA" />
       </a>
     </div>
