--- a/detailpage.html
+++ b/detailpage.html
@@ -296,10 +296,10 @@
           <img class="img_logo_white" src="./images/comm/prada_white.svg" alt="prada_white">
          </a>
           <ul class="menu">
-            <li><a href="#">WOMAN</a></li>
-            <li><a href="#">MAN</a></li>
-            <li><a href="#">GIFT</a></li>
-            <li><a href="#">LINEA ROSSA</a></li>
+            <li><a href="./goods-list.html">WOMAN</a></li>
+            <li><a href="./goods-list.html">MAN</a></li>
+            <li><a href="./goods-list.html">GIFT</a></li>
+            <li><a href="./goods-list.html">LINEA ROSSA</a></li>
           </ul>
           <ul class="lst-categ2">
             <li class="categ-item2">
