--- a/detailpage.html
+++ b/detailpage.html
@@ -914,7 +914,10 @@
           <div class="view_image_wrap">
             <div class="viewimg_exp_box">
             <h2 class="product_info">상품정보</h2>
+            <div class="model_size_box">
             <h3 class="model_img_tit">Model image</h3>
+            <span class="model_size">Man Size (50)</span>
+            </div>
             <span class="model_img_exp"
               >모델 착용 이미지보다 제품컷 이미지의 컬러가 정확합니다.</span
             >
