--- a/detailpage.html
+++ b/detailpage.html
@@ -57,6 +57,7 @@
     />
     <link rel="stylesheet" href="./dist/css/comm.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script defer src="./dist/js/include.js"></script>
     <script defer src="./dist/js/comm.js"></script>
@@ -376,11 +377,122 @@
                     />
                   </div>
                 </a>
-                <ul>
-                  <li><a class="categ_tit" href="#">WOMAN</a></li>
-                  <li><a class="categ_tit" href="#">MAN</a></li>
-                  <li><a class="categ_tit" href="#">GIFT</a></li>
-                  <li><a class="categ_tit" href="#">LINEA ROSSA</a></li>
+                <ul class="item_wrap">
+                  <li class="item">
+                    <button type="button" class="categ_tit">WOMAN</button>
+                    <ul class="categ_box">
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >컬렉션</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >레디투웨어</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >가방</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >슈즈</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >액세서리</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >라이프스타일 액세서리</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >주얼리</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >트래블</a
+                        >
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="item">
+                    <button type="button" class="categ_tit">MAN</button>
+                    <ul class="categ_box">
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >컬렉션</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >레디투웨어</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >가방</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >슈즈</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >액세서리</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >라이프스타일 액세서리</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >주얼리</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >트래블</a
+                        >
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="item">
+                    <button type="button" class="categ_tit">GIFT</button>
+                    <ul class="categ_box">
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >여성 선물</a
+                        >
+                      </li>
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >남성 선물</a
+                        >
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="item">
+                    <button type="button" class="categ_tit">LINEA ROSSA</button>
+                    <ul class="categ_box">
+                      <li class="categ_lst">
+                        <a class="small_categ_tit" href="./goods-list.html"
+                          >남성 리네아 로사</a
+                        >
+                      </li>
+                    </ul>
+                  </li>
                 </ul>
                 <ul class="lst_categ2">
                   <li class="categ_item2">
@@ -454,7 +566,7 @@
               <div class="thumb_wrap">
                 <p class="item_tit">
                   컬러
-                  <span Class="dispColor"></span>
+                  <span class="dispColor"></span>
                 </p>
                 <ul class="select_color">
                   <li>
@@ -998,7 +1110,7 @@
             <h2 class="product_info">상품정보</h2>
             <div class="model_size_box">
             <h3 class="model_img_tit">Model image</h3>
-            <span class="model_size">Man Size (50)</span>
+            <span class="model_size">Man Size (52)</span>
             </div>
             <span class="model_img_exp"
               >모델 착용 이미지보다 제품컷 이미지의 컬러가 정확합니다.</span
