--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                 </ul>
                 <ul class="lst_categ2">
                   <li class="categ_item2">
-                    <a href="./cart.html" class="menu_wish"> 위시리스트 </a>
+                    <a href="#" class="menu_wish"> 위시리스트 </a>
                   </li>
                   <li class="categ_item2">
                     <a href="#" class="menu_phone"> 문의하기 </a>
