--- a/cart.html
+++ b/cart.html
@@ -62,8 +62,6 @@
     <script defer src="./dist/js/include.js"></script>
     <script defer src="./dist/js/comm.js"></script>
   </head>
-</html>
-
   <body>
     <div id="u-skip">
       <a href="#gnb"><span>주요메뉴 바로가기</span></a>
@@ -497,7 +495,7 @@
                 </ul>
                 <ul class="lst_categ2">
                   <li class="categ_item2">
-                    <a href="./cart.html" class="menu_wish"> 위시리스트 </a>
+                    <a href="#" class="menu_wish"> 위시리스트 </a>
                   </li>
                   <li class="categ_item2">
                     <a href="#" class="menu_phone"> 문의하기 </a>
@@ -511,103 +509,118 @@
       <main id="main">
         <div class="cart_buy_list_wrap">
           <div class="main_inner">
-         <div class="toggle-area">
-            <span>상품상세</span>
-            <a href="#" class="icon"></a>
-         </div>
-         <div class="item-dec">
-         <a href="#" class="cart_img_wrap">
-            <img class="cart_img" src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg" alt="cloth_item">
-        </a> 
-        <div class="item-detail">
-            <a href="#">
-            <h3 class="item_name">캐시미어가디건</h3> 
-            </a>
-            <div class="option_wrap">
-                <span class="option opt">카멜브라운</span>
-                <span class="option-sort">/</span>
-                <span class="option opt">S</span>
-                <a href="#">
-                <span class="underline">옵션변경</span>   
-                </a>
+            <div class="toggle-area">
+              <span>상품상세</span>
+              <a href="#" class="icon"></a>
             </div>
-        <div class="item-quantity display-small-only">
-            <form method="POST" action="/cart/updateQuantity">
-                <div class="product-quantity">
-                    <span>수량</span>
-                    <div class="select_wrap  select-box">
+            <div class="item-dec">
+              <a href="#" class="cart_img_wrap">
+                <img
+                  class="cart_img"
+                  src="https://www.prada.com/content/dam/pradabkg_products/U/UMG/UMG263/13J6F0040/UMG263_13J6_F0040_S_232_SLF.jpg/_jcr_content/renditions/cq5dam.web.hebebed.1200.1200.jpg"
+                  alt="cloth_item"
+                />
+              </a>
+              <div class="item-detail">
+                <a href="#">
+                  <h3 class="item_name">캐시미어가디건</h3>
+                </a>
+                <div class="option_wrap">
+                  <span class="option opt">카멜브라운</span>
+                  <span class="option-sort">/</span>
+                  <span class="option opt">S</span>
+                  <a href="#">
+                    <span class="underline">옵션변경</span>
+                  </a>
+                </div>
+                <div class="item-quantity display-small-only">
+                  <form method="POST" action="/cart/updateQuantity">
+                    <div class="product-quantity">
+                      <span>수량</span>
+                      <div class="select_wrap select-box">
                         <select name="quantity" id="quantity_select">
-                            <option selected="selected" value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
+                          <option selected="selected" value="1">1</option>
+                          <option value="2">2</option>
+                          <option value="3">3</option>
                         </select>
+                      </div>
+                      <p class="print-message msg">3개까지 구매 가능합니다.</p>
                     </div>
-                    <p class="print-message msg">3개까지 구매 가능합니다.</p>
+                  </form>
                 </div>
-            </form>
-        </div>
-        <div class="item-price display-small-only">
-            <span class="retail-price">3,850,000 원</span>
-        </div>
-        <div class="etc-action-btn">
-            <div class="wish-btn-wrap">
-                <a href="#">
-                    <span class="txt">위시리스트에 추가</span>
-                </a>
+                <div class="item-price display-small-only">
+                  <span class="retail-price">3,850,000 원</span>
+                </div>
+                <div class="etc-action-btn">
+                  <div class="wish-btn-wrap">
+                    <a href="#">
+                      <span class="txt">위시리스트에 추가</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="item-delete-wrap">
+                <a href="#" class="trigger-remove delete-btn"></a>
+              </div>
             </div>
-        </div> 
-        </div>
-        <div class="item-delete-wrap">
-            <a href="#" class="trigger-remove delete-btn"></a>
-        </div>
-         </div>
-        </div>
-        <div class="coupon_wrap">
-          <div class="main_inner">
-            <h2 class="coupon_tit">쿠폰 코드</h2>
-            <form class="promo-form" action="/cart/promo" method="POST">
-                <div class="row code_wrap">
-                    <div class="input-promo input-textfield">
-                        <input type="text" id="promoCode" name="promoCode" placeholder="코드입력">
-                    </div>
-                    <div class="submit-promo">
-                        <button type="button" class="btn-submit">적용하기</button>
-                    </div> 
-                </div>
-            </form>
           </div>
-        </div>
-        <div class="cart-order_wrap">
-          <div class="main_inner">
-            <h2 class="cart_order_tit">주문 상세내역</h2>
-            <p class="list-item">
+          <div class="coupon_wrap">
+            <div class="main_inner">
+              <h2 class="coupon_tit">쿠폰 코드</h2>
+              <form class="promo-form" action="/cart/promo" method="POST">
+                <div class="row code_wrap">
+                  <div class="input-promo input-textfield">
+                    <input
+                      type="text"
+                      id="promoCode"
+                      name="promoCode"
+                      placeholder="코드입력"
+                    />
+                  </div>
+                  <div class="submit-promo">
+                    <button type="button" class="btn-submit">적용하기</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="cart-order_wrap">
+            <div class="main_inner">
+              <h2 class="cart_order_tit">주문 상세내역</h2>
+              <p class="list-item">
                 총 상품 금액(1)
                 <span class="item-price right-span">
-                    <span class="sale">3,850,000 원</span>
+                  <span class="sale">3,850,000 원</span>
                 </span>
-            </p>
-            <p class="list-item shipping-price">
+              </p>
+              <p class="list-item shipping-price">
                 총 배송비 :
                 <span class="shiiping-price right-span">0 원</span>
-            </p>
-            <p class="list-item order-sale-total-price">
+              </p>
+              <p class="list-item order-sale-total-price">
                 총 할인 금액 :
-              <span class="sale-total-price right-span">0 원</span>
-            </p>
-            <p class="list-item order-total-price">
-                총 결제 예정 금액 : 
+                <span class="sale-total-price right-span">0 원</span>
+              </p>
+              <p class="list-item order-total-price">
+                총 결제 예정 금액 :
                 <span class="total-price right-span">3,850,000 원</span>
-            </p>
-            <a class="checkoutBtn button primary width-max btn-order" href="./payment.html">
+              </p>
+              <a
+                class="checkoutBtn button primary width-max btn-order"
+                href="./payment.html"
+              >
                 주문하기
-            </a>
-            <a class="shipping_more_btn" href="#">쇼핑 계속하기</a>
-            <p class="cart-dec">실 결제 금액은 주문서 내 고객님의 쿠폰/할인 적용에 따라 달라집니다.</p>
+              </a>
+              <a class="shipping_more_btn" href="#">쇼핑 계속하기</a>
+              <p class="cart-dec">
+                실 결제 금액은 주문서 내 고객님의 쿠폰/할인 적용에 따라
+                달라집니다.
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
-        </div>
-    </main>
-</div>
-  <footer data-include-path="./outline/footer.html"></footer>
+      </main>
+    </div>
+    <footer data-include-path="./outline/footer.html"></footer>
   </body>
 </html>
