--- a/payment.html
+++ b/payment.html
@@ -1,10 +1,8 @@
   <!DOCTYPE html>
   <html lang="ko">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PRADA</title>
     <meta name="description" content="네이버 메인에서 다양한 정보와 유용한 컨텐츠를 만나 보세요" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="페이지 제목" />
@@ -16,7 +14,12 @@
     <meta name="twitter:description" content="페이지 설명" />
     <meta name="twitter:image" content="http://www.mysite.com/article/article1.html" />
     <meta name="twitter:domain" content="사이트 명" />
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <title>PRADA</title>
+    <link
+      rel="shortcut icon"
+      href="./images/prada_favicon.ico"
+      type="image/x-icon"
+    />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Staatliches&display=swap" rel="stylesheet" />
